--- a/css_repo/01_link.html
+++ b/css_repo/01_link.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <!-- Demonstrates Hyperlinks -->
-
+<!-- Css selector: id (create unique identifier) -->
 <html lang="en">
     <head>
         <style>
-            a
+            #google
             {
-                color: aqua;
+                color: deeppink;
                 text-decoration: none;
                 text-shadow: 0cm;
             }
 
-            a:hover
+            #linkedin
             {
+                color: brown;
                 text-decoration: underline;
             }
         </style>
         <title>Link</title>
     </head>
     <body>
-        Visit <a href="image.html"> TCP/IP Protocol example</a>.
-        Visit <a href="https://www.linkedin.com/in/bhardwaj-suraj/">My Linkedin Profile</a>.
+        Visit <a href="https://www.google.com/" id="google">Google</a> or <a href="https://www.linkedin.com/in/bhardwaj-suraj/" id="linkedin">Linkedin</a>.
     </body>
 </html>
